// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadAsync errors if loading fails 1`] = `
<div>
  Error! Component failed to load
</div>
`;

exports[`LoadAsync renders \`loading\` if loading is slow 1`] = `
<div>
  Loading...
</div>
`;

exports[`LoadAsync renders loading element 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Text-hPdHUJ fUQjbR"
  />
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    You're logged in as 
  </p>
  <button
    className="Button__Button-jkHDFw iFOruw"
    onClick={undefined}
  >
    Log out
  </button>
</div>
`;
